# crawler

./: .env.example  .gitignore  ANTIBOT.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
app/: antibot.py  api.py  auth.py  concurrency.py  config.py  crawler.py  db.py  extract.py  fetcher.py  httpclient.py  jobs.py  lrucache.py  mcp_server.py  migrations.py  observability.py  pdfextract.py  ratelimit.py  robots.py  service.py  solver.py  ssrf.py  textmeta.py  urls.py
tests/: test_antibot.py  test_api.py  test_api_extra.py  test_concurrency.py  test_crawler.py  test_crawler_correctness.py  test_extract.py  test_fetcher.py  test_integration_db.py  test_jobs.py  test_jobs_webhook.py  test_lrucache.py  test_pdfextract.py  test_robots.py  test_service.py  test_solver.py  test_ssrf.py  test_textmeta.py  test_urls.py
web/: .env.example  package-lock.json  package.json  tailwind.config.ts
web/app/: crawl-form.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/api/crawl/: route.ts
web/app/api/crawl/jobs/: route.ts
web/app/api/crawl/jobs/[id]/: route.ts
web/app/api/crawl/jobs/[id]/stream/: route.ts
web/app/api/jobs/: route.ts
web/app/api/jobs/[id]/events/: route.ts
web/app/api/pages/[id]/: route.ts
web/app/api/pages/export/: route.ts
web/app/api/stats/: route.ts
web/app/components/: command-palette.tsx  mobile-nav.tsx  sidebar.tsx  theme.tsx  time.tsx  toast.tsx  topbar.tsx
web/app/domains/: page.tsx
web/app/jobs/: page.tsx
web/app/pages/: loading.tsx  page.tsx  pages-table.tsx
web/app/pages/[id]/: delete-button.tsx  loading.tsx  page-content.tsx  page.tsx
web/app/settings/: page.tsx
web/lib/: api.ts  types.ts
