[project]
name = "crawler"
version = "0.3.0"
description = "Fast web crawling service with REST API, MCP server, and dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "trafilatura>=1.12",
    "playwright>=1.48",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "mcp>=1.0",
    "tenacity>=9.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
sentry = ["sentry-sdk>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
